@@ -278,6 +278,22 @@ void main_prog(void *closure, int argc, char *argv[])
                        w_current->page_current->page_filename);
       }
     }
+
+    /* Run the new page hook */
+    if (scm_hook_empty_p(new_page_hook) == SCM_BOOL_F &&
+	w_current->page_current != NULL) {
+      scm_run_hook(new_page_hook,
+		   scm_cons(g_make_page_smob(w_current, 
+					     w_current->page_current),
+			    SCM_EOL));
+    }
+    
+    /* Do a zoom extents for each page */
+    a_zoom_extents(w_current,
+		   w_current->page_current->object_head,
+		   A_PAN_DONT_REDRAW);
+
+    /* Go to the next argument */
     i++;
   }
 
@@ -311,18 +327,6 @@ void main_prog(void *closure, int argc, char *argv[])
                    w_current->page_current->page_filename);
   }
 
-  /* Run the new page hook */
-  if (scm_hook_empty_p(new_page_hook) == SCM_BOOL_F &&
-      w_current->page_current != NULL) {
-    scm_run_hook(new_page_hook,
-		 scm_cons(g_make_page_smob(w_current, 
-					   w_current->page_current),
-			  SCM_EOL));
-  }
-
-  a_zoom_extents(w_current,
-		 w_current->page_current->object_head,
-		 A_PAN_DONT_REDRAW);
   o_undo_savestate(w_current, UNDO_ALL);
   
   
